# Yosuga

./: .gitignore  About_Project.md  AppContext.h  CMakeLists.txt  GLCore.cpp  GLCore.h  LICENSE  README.md  TextRenderer.h  Yosuga.rc  main.cpp
LAppLive2D/Inc/: LAppLive2DManager.hpp
LAppLive2D/Src/: LAppDelegate.cpp  LAppLive2DManager.cpp
USER_SOURCE/AudioHandle/Inc/: AudioInput.h  AudioOutput.h
USER_SOURCE/AudioHandle/Src/: AudioInput.cpp  AudioOutput.cpp
USER_SOURCE/Menu/Inc/: menu.h
USER_SOURCE/Menu/Src/: menu.cpp
USER_SOURCE/NetWorkHandle/Inc/: networkmanager.h  websocketmanager.h
USER_SOURCE/Setting/Inc/: AudioPage.h  HomePage.h  ModelPage.h  NetworkPage.h  Setting.h  UISetting.h
USER_SOURCE/Setting/Src/: AudioPage.cpp  BasePage.cpp  HomePage.cpp  NetworkPage.cpp  RenderPage.cpp  Setting.cpp  UISetting.cpp
